--- a/posts/learning-gatsby.mdx
+++ b/posts/learning-gatsby.mdx
@@ -5,4 +5,14 @@ title: Learning about Gatsby
 
 This is just some text so this looks like a post.
 
+```js
+let value = 45;
+
+const myConstant = 67;  // highlight-line
+
+function myFunction() {
+  return "Hello";
+}
+```
+
 Nothing to see here but I needed some content
