--- a/posts/learning-gatsby/index.mdx
+++ b/posts/learning-gatsby/index.mdx
@@ -2,6 +2,8 @@
 title: Learning about Gatsby
 image: ./andrew-branch-204321.jpg
 imageAlt: learning Gatsby
+date: 2021-09-29
+tags: [learning, coding]
 ---
 
 
