Filtering posts by tag

--- a/posts/learning-gatsby/index.mdx
+++ b/posts/learning-gatsby/index.mdx
@@ -6,16 +6,15 @@ date: 2021-09-29
 tags: [learning, coding]
 ---
 
-
 This is just some text so this looks like a post.
 
 ```js
-let value = 45;
+let value = 45
 
-const myConstant = 67;  // highlight-line
+const myConstant = 67 // highlight-line
 
 function myFunction() {
-  return "Hello";
+  return "Hello"
 }
 ```
 
