Markdown for posts

--- a/posts/learning-gatsby/index.mdx
+++ b/posts/learning-gatsby/index.mdx
@@ -4,6 +4,7 @@ image: ./andrew-branch-204321.jpg
 imageAlt: learning Gatsby
 date: 2021-09-29
 tags: [learning, coding]
+categories: []
 ---
 
 This is just some text so this looks like a post.
