Make post not draft

--- a/posts/super-powers-for-active-record-relation.mdx
+++ b/posts/super-powers-for-active-record-relation.mdx
@@ -3,7 +3,7 @@ title: Super Powers for ActiveRecord::Relation
 date: 2024-05-31
 tags: [programming, rails]
 categories: []
-draft: true
+draft: false
 ---
 
 Whenever you query your database with Rails, what you get in return is an An ActiveRecord::Relation; 
