--- a/posts/super-powers-for-active-record-relation.mdx
+++ b/posts/super-powers-for-active-record-relation.mdx
@@ -11,7 +11,7 @@ a chainable object that is lazily evaluated against the database only when the a
 Usually, you can chain other class methods and scopes to this ActiveRecord::Relation. 
 For instance, let's say you have a Post model with a `featured` scope.
 
-```
+```ruby
 Post.where(topic: "animals").featured
 ```
 
@@ -22,7 +22,7 @@ Let's say you want to add a way to generate a CSV string out of an ActiveRecord:
 Then you could simply chain a method, such as `to_csv` to any query and get a CSV string representation of all the rows, 
 using the name of the returned columns as headers.
 
-```
+```ruby
   Post.featured.select(:author_name, :topic).limit(2).to_csv 
 
   => "author_name,topic\nJohn Mountains,Nature\nAlma Aqua,Sea Levels\n"
@@ -34,7 +34,7 @@ Books.where(subject: "programming").select(:name, :publisher).limit(2).to_csv
 
 To achieve this you could add a concern such as this one:
 
-```
+```ruby
 require "csv"
 
 module CSVPrintable
@@ -63,7 +63,7 @@ end
 
 Then, to make it available to all your models, simply add it to ApplicationRecord, from which all your models inherit from.
 
-```
+```ruby
 class ApplicationRecord < ActiveRecord::Base
   self.abstract_class = true
 
