--- a/posts/learning-gatsby/index.mdx
+++ b/posts/learning-gatsby/index.mdx
@@ -5,6 +5,7 @@ imageAlt: learning Gatsby
 date: 2021-09-29
 tags: [learning, coding]
 categories: []
+draft: true
 ---
 
 This is just some text so this looks like a post.
